# GECP_NTL_Thesis_2026

./: .gitignore  README.md  download_files.sh  get_land_cover.py  pyproject.toml  run_case_study_nc.sh
appendix/misc./: affected_style.qml
appendix/old_scripts/: Analysing_case_study_nc_tester.py  Analysing_case_study_old.py  best_model_analysis copy.ipynb  model_starts.ipynb  new_model_preprocessing.ipynb  scratch_tester_file.ipynb  shp2ras_case_study.py  to_delete_Analysing_case_study.py  tree_model_final copy.ipynb  tree_models.ipynb  tree_models_2.ipynb
data_final/: typhoon_names_years_updated.csv
data_final/shape_file/buffered_files/: PH_dissolved_buffer.dbf  PH_dissolved_buffer.shx
figures/: bopha_aff_upscale_hires.jgw  grided_cells_vis.jgw  landcover_for_vis.jgw  landcover_hi_res.jgw  utor_aff.jgw
scripts/: ..final_column_names.csv  best_model_analysis copy.ipynb  best_model_analysis.ipynb  correlation_analysis.ipynb  helper_functions.py  logistic_regression_for_model.ipynb  quick_test_with_synthetic_data.ipynb  residual_analysis_2.ipynb  tree_model_final.ipynb  tree_model_refinements.ipynb  upscale_and_feature_engineering.ipynb
