[project]
name = "ntlthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "affine==2.4.0",
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "certifi==2026.2.25",
    "click==8.3.1",
    "cligj==0.7.2",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fonttools==4.61.1",
    "gdal>=3.12.2",
    "geopandas==1.1.2",
    "imblearn>=0.0",
    "ipykernel==7.2.0",
    "ipython==9.10.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "lightgbm>=4.6.0",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "netcdf4>=1.7.4",
    "networkx>=3.6.1",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pillow==12.1.1",
    "platformdirs==4.9.2",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyogrio==0.12.1",
    "pyparsing==3.3.2",
    "pyproj==3.7.2",
    "pyshp==3.0.3",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "rasterio==1.5.0",
    "rasterstats>=0.20.0",
    "rioxarray>=0.22.0",
    "scikit-learn>=1.8.0",
    "seaborn==0.13.2",
    "shapely==2.1.2",
    "six==1.17.0",
    "smogn>=0.1.2",
    "stack-data==0.6.3",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "wcwidth==0.6.0",
    "xarray>=2026.4.0",
    "xgboost>=3.2.0",
]

[tool.uv.workspace]
members = [
    "data/shape_files/buffered_files/ntl_enve",
]
